delete button for template bodies

--- a/Backoffice/Components/Notifications/Templates/NotificationTemplatesComponent.razor
+++ b/Backoffice/Components/Notifications/Templates/NotificationTemplatesComponent.razor
@@ -18,70 +18,83 @@
     </tr>
     </thead>
     <tbody>
-        @{
-            var rowNumber = _index;
-        }
-        
-        @foreach (var template in _templates)
+    @{
+        var rowNumber = _index;
+    }
+
+    @foreach (var template in _templates)
+    {
+        rowNumber++;
+        <tr>
+            <td>@rowNumber</td>
+            <td>@template.Type.ToString()</td>
+            <td>@template.DefaultBrand</td>
+            <td>@template.DefaultLang</td>
+            <td>@string.Join(" ", template.Params.ToArray())</td>
+            <td>
+                <ul class="nav">
+                    <li>
+                        <button type="button" class="btn-outline-info btn" @onclick="@(() => { ShowBodies(template, template.Type.ToString()); })">Bodies</button>
+                    </li>
+                </ul>
+            </td>
+        </tr>
+        @if (SelectedPosition == template.Type.ToString())
         {
-            rowNumber++;
+            SelectedType = template.Type;
+            SelectedTemplateParams = string.Join(" ", template.Params.ToArray());
+
             <tr>
-                <td>@rowNumber</td>
-                <td>@template.Type.ToString()</td>
-                <td>@template.DefaultBrand</td>
-                <td>@template.DefaultLang</td>
-                <td>@string.Join(" ", template.Params.ToArray())</td>
-                <td>
-                    <ul class="nav">
-                        <li><button type="button" class="btn-outline-info btn" @onclick="@(() => { ShowBodies(template, template.Type.ToString()); })">Bodies</button></li>
-                    </ul>
+                <td colspan="9">
+                    <div class="border" style="margin-left: 20px; width: auto">
+                        <table class="table">
+                            <thead>
+                            <tr>
+                                <th>Brand</th>
+                                <th>Language</th>
+                                <th>Topic</th>
+                                <th>Body</th>
+                                <th>Actions</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            @foreach (var body in _bodies)
+                            {
+                                <tr style="background: @(GetTemplateBackground(template.DefaultBrand, body.Key.brand))">
+                                    <td>@body.Key.brand</td>
+                                    <td>@body.Key.lang</td>
+                                    <td>@body.Value.topic</td>
+                                    <td>@body.Value.body</td>
+                                    <td>
+                                        <ul class="nav nav-tabs nav-pills">
+                                            <li class="nav-item"> 
+                                                <button type="button" class="btn-outline-info btn" @onclick="() => { ShowEdit(body); }">Edit</button>
+                                            </li>
+                                            @if (body.Key.brand != template.DefaultBrand && body.Key.lang != template.DefaultLang)
+                                            {
+                                                <li class="nav-item">
+                                                    <button type="button" class="btn-outline-danger btn" @onclick="async () => { await DeleteBody(body.Key.brand, body.Key.lang); }">Delete</button>
+                                                </li>
+                                            }
+                                        </ul>
+
+                                    </td>
+                                </tr>
+                            }
+                            </tbody>
+                            <div>
+                                <ul class="nav">
+                                    <li>
+                                        <button type="button" class="btn-outline-info btn" @onclick="ShowCreate">Add body</button>
+                                    </li>
+                                </ul>
+                            </div>
+                        </table>
+                    </div>
                 </td>
             </tr>
-            @if (SelectedPosition == template.Type.ToString())
-            {
-                SelectedType = template.Type;
-                SelectedTemplateParams = string.Join(" ", template.Params.ToArray());
-                
-                <tr>
-                    <td colspan="9">
-                        <div class="border" style="margin-left: 20px; width: auto">
-                            <table class="table">
-                                <thead>
-                                <tr>
-                                    <th>Brand</th>
-                                    <th>Language</th>
-                                    <th>Topic</th>
-                                    <th>Body</th>
-                                    <th>Edit</th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                @foreach (var body in _bodies)
-                                {
-                                    <tr style="background: @(GetTemplateBackground(template.DefaultBrand, body.Key.brand))">
-                                        <td>@body.Key.brand</td>
-                                        <td>@body.Key.lang</td>
-                                        <td>@body.Value.topic</td>
-                                        <td>@body.Value.body</td>
-                                        <td>
-                                            <ul class="nav">
-                                                <li><button type="button" class="btn-outline-info btn" @onclick="() => { ShowEdit(body); }">Edit</button></li>
-                                            </ul>
-                                        </td>
-                                    </tr>
-                                }
-                                </tbody>
-                                <div>
-                                        <ul class="nav">
-                                            <li><button type="button" class="btn-outline-info btn" @onclick="ShowCreate">Add body</button></li>
-                                        </ul>
-                                </div>
-                            </table>
-                        </div>
-                    </td>
-                </tr>
-            }
         }
+    }
     </tbody>
 
 </table>
@@ -90,7 +103,7 @@
 @if (IsShowEdit)
 {
     <div>
-        <NotificationBodyDialogEdit Request="@EditRequest" IsCreate="@IsCreate" TemplateParams="@SelectedTemplateParams" OnCloseCallback="OnCloseEditDialog" OnUpdateCallback="async () => { await OnUpdateTemplate(); }" />
+        <NotificationBodyDialogEdit Request="@EditRequest" IsCreate="@IsCreate" TemplateParams="@SelectedTemplateParams" OnCloseCallback="OnCloseEditDialog" OnUpdateCallback="async () => { await OnUpdateTemplate(); }"/>
     </div>
 }
 
@@ -116,12 +129,12 @@
         _templates = (await _templateService.GetAllTemplates()).Templates;
         StateHasChanged();
     }
-    
+
     private async void ShowBodies(NotificationTemplate template, string positionId)
     {
         if (SelectedPosition == positionId)
         {
-            _bodies = new ();
+            _bodies = new SortedDictionary<(string brand, string lang), (string topic, string body)>();
             SelectedPosition = null;
         }
         else
@@ -129,18 +142,17 @@
             _bodies = new SortedDictionary<(string brand, string lang), (string topic, string body)>(template.Bodies);
             SelectedPosition = positionId;
         }
-        
+
         await InvokeAsync(StateHasChanged);
     }
-    
 
-    private void ShowEdit(KeyValuePair<(string brand,string lang),(string topic,string body)> body)
+
+    private void ShowEdit(KeyValuePair<(string brand,string lang), (string topic,string body)> body)
     {
         IsCreate = false;
-        Enum.TryParse<NotificationTypeEnum>(SelectedPosition, out var type);
-        EditRequest = new TemplateEditRequest()
+        EditRequest = new TemplateEditRequest
         {
-            Type = type,
+            Type = SelectedType,
             Brand = body.Key.brand,
             Lang = body.Key.lang,
             TemplateTopic = body.Value.topic,
@@ -153,7 +165,7 @@
     private void ShowCreate()
     {
         IsCreate = true;
-        EditRequest = new TemplateEditRequest()
+        EditRequest = new TemplateEditRequest
         {
             Type = SelectedType
         };
@@ -172,10 +184,10 @@
         IsShowEdit = false;
         await _templateService.EditTemplate(EditRequest);
         _bodies[(EditRequest.Brand,EditRequest.Lang)] = (EditRequest.TemplateTopic, EditRequest.TemplateBody);
-        StateHasChanged();
+        await RefreshTokens();
     }
 
-    private string GetTemplateBackground(string defaultBrand, string brand )
+    private string GetTemplateBackground(string defaultBrand, string brand)
     {
         if (brand == defaultBrand)
         {
@@ -183,4 +195,18 @@
         }
         return "white";
     }
+
+    private async Task DeleteBody(string brand, string lang)
+    {
+        EditRequest = new TemplateEditRequest
+        {
+            Type = SelectedType,
+            Brand = brand,
+            Lang = lang
+        };
+        await _templateService.DeleteBody(EditRequest);
+        _bodies.Remove((brand,lang));
+        await RefreshTokens();
+    }
+
 }
