--- a/Backoffice/Components/Clients/ClientPresentationComponent.razor
+++ b/Backoffice/Components/Clients/ClientPresentationComponent.razor
@@ -102,7 +102,7 @@
                             break;
                             
                         case ClientPage.Sessions:
-                            <p>ClientSessionsComponent</p>
+                            <ClientSessionsComponent ClientId="@Client.ClientId"/>
                             break;
                             
                         case ClientPage.Notifications:
