--- a/Backoffice/Components/Notifications/Templates/NotificationTemplatesComponent.razor
+++ b/Backoffice/Components/Notifications/Templates/NotificationTemplatesComponent.razor
@@ -14,7 +14,7 @@
         <th>Default Brand</th>
         <th>Default Language</th>
         <th>Params</th>
-        <th>Bodies</th>
+        <th>Actions</th>
     </tr>
     </thead>
     <tbody>
@@ -32,9 +32,12 @@
             <td>@template.DefaultLang</td>
             <td>@string.Join(" ", template.Params.ToArray())</td>
             <td>
-                <ul class="nav">
+                <ul class="nav nav-tabs">
                     <li>
-                        <button type="button" class="btn-outline-info btn" @onclick="@(() => { ShowBodies(template, template.Type.ToString()); })">Bodies</button>
+                        <button type="button" class="btn-outline-info btn" @onclick="@(() => { ShowBodies(template, template.Type.ToString()); })">Show Bodies</button>
+                    </li>
+                    <li>
+                         <button type="button" class="btn-outline-info btn" @onclick="@(() => { ShowDefaultsEdit(template); })">Edit defaults</button>
                     </li>
                 </ul>
             </td>
@@ -68,9 +71,9 @@
                                     <td>
                                         <ul class="nav nav-tabs nav-pills">
                                             <li class="nav-item"> 
-                                                <button type="button" class="btn-outline-info btn" @onclick="() => { ShowEdit(body); }">Edit</button>
+                                                <button type="button" class="btn-outline-info btn" @onclick="() => { ShowBodyEdit(body); }">Edit</button>
                                             </li>
-                                            @if (body.Key.brand != template.DefaultBrand && body.Key.lang != template.DefaultLang)
+                                            @if (body.Key.brand != template.DefaultBrand || body.Key.lang != template.DefaultLang)
                                             {
                                                 <li class="nav-item">
                                                     <button type="button" class="btn-outline-danger btn" @onclick="async () => { await DeleteBody(body.Key.brand, body.Key.lang); }">Delete</button>
@@ -100,10 +103,17 @@
 </table>
 
 
-@if (IsShowEdit)
+@if (IsShowBodyEdit)
 {
     <div>
-        <NotificationBodyDialogEdit Request="@EditRequest" IsCreate="@IsCreate" TemplateParams="@SelectedTemplateParams" OnCloseCallback="OnCloseEditDialog" OnUpdateCallback="async () => { await OnUpdateTemplate(); }"/>
+        <NotificationTemplateEditDialog Request="@EditRequest" IsCreate="@IsCreate" TemplateParams="@SelectedTemplateParams" OnCloseCallback="OnCloseEditDialog" OnUpdateCallback="async () => { await OnUpdateTemplateBody(); }"/>
+    </div>
+}
+
+@if (IsShowDefaultsEdit)
+{
+    <div>
+        <NotificationTemplateEditDialog Request="@EditRequest" IsCreate="@true" TemplateParams="@SelectedTemplateParams" OnCloseCallback="OnCloseEditDialog" OnUpdateCallback="async () => { await OnUpdateTemplateDefaults(); }"/>
     </div>
 }
 
@@ -113,7 +123,9 @@
     private List<NotificationTemplate> _templates = new();
     private long _index = 0;
     private string SelectedPosition { get; set; }
-    private bool IsShowEdit { get; set; }
+    private bool IsShowBodyEdit { get; set; }
+    private bool IsShowDefaultsEdit { get; set; }
+
     private TemplateEditRequest EditRequest { get; set; }
     private bool IsCreate { get; set; }
     private string SelectedTemplateParams { get; set; }
@@ -121,10 +133,10 @@
 
     protected override async Task OnInitializedAsync()
     {
-        await RefreshTokens();
+        await RefreshTemplates();
     }
 
-    private async Task RefreshTokens()
+    private async Task RefreshTemplates()
     {
         _templates = (await _templateService.GetAllTemplates()).Templates;
         StateHasChanged();
@@ -146,8 +158,23 @@
         await InvokeAsync(StateHasChanged);
     }
 
+    private void ShowDefaultsEdit(NotificationTemplate template)
+    {
+        SelectedTemplateParams = string.Join(" ", template.Params.ToArray());
+        var (defaultTopic, defaultBody) = template.Bodies[(template.DefaultBrand, template.DefaultLang)];
+        EditRequest = new TemplateEditRequest
+        {
+            Type = template.Type,
+            Brand = template.DefaultBrand,
+            Lang = template.DefaultLang,
+            TemplateTopic = defaultTopic,
+            TemplateBody = defaultBody
+        };
+        IsShowDefaultsEdit = true;
+        StateHasChanged();
+    }
 
-    private void ShowEdit(KeyValuePair<(string brand,string lang), (string topic,string body)> body)
+    private void ShowBodyEdit(KeyValuePair<(string brand,string lang), (string topic,string body)> body)
     {
         IsCreate = false;
         EditRequest = new TemplateEditRequest
@@ -158,7 +185,7 @@
             TemplateTopic = body.Value.topic,
             TemplateBody = body.Value.body
         };
-        IsShowEdit = true;
+        IsShowBodyEdit = true;
         StateHasChanged();
     }
 
@@ -169,22 +196,31 @@
         {
             Type = SelectedType
         };
-        IsShowEdit = true;
+        IsShowBodyEdit = true;
         StateHasChanged();
     }
 
     private void OnCloseEditDialog()
     {
-        IsShowEdit = false;
+        IsShowBodyEdit = false;
+        IsShowDefaultsEdit = false;
         StateHasChanged();
     }
 
-    private async Task OnUpdateTemplate()
+    private async Task OnUpdateTemplateBody()
     {
-        IsShowEdit = false;
+        IsShowBodyEdit = false;
         await _templateService.EditTemplate(EditRequest);
         _bodies[(EditRequest.Brand,EditRequest.Lang)] = (EditRequest.TemplateTopic, EditRequest.TemplateBody);
-        await RefreshTokens();
+        await RefreshTemplates();
+    }
+    
+    private async Task OnUpdateTemplateDefaults()
+    {
+        IsShowDefaultsEdit = false;
+        await _templateService.EditDefaultValues(EditRequest);
+        _bodies[(EditRequest.Brand,EditRequest.Lang)] = (EditRequest.TemplateTopic, EditRequest.TemplateBody);
+        await RefreshTemplates();
     }
 
     private string GetTemplateBackground(string defaultBrand, string brand)
@@ -206,7 +242,7 @@
         };
         await _templateService.DeleteBody(EditRequest);
         _bodies.Remove((brand,lang));
-        await RefreshTokens();
+        await RefreshTemplates();
     }
 
 }
