--- a/Backoffice/Components/Clients/ClientPresentationComponent.razor
+++ b/Backoffice/Components/Clients/ClientPresentationComponent.razor
@@ -1,4 +1,5 @@
 ﻿@using Backoffice.Components.Clients.Model
+@using Backoffice.Components.Converter.History
 @using MyJetWallet.Domain
 @using Service.ClientWallets.Domain.Models
 @using Service.ClientWallets.Grpc
@@ -59,7 +60,10 @@
                         <button class="page-link" style="@(GetMenuStyle(ClientPage.TradeHistory))" @onclick="@(() => SetPage(ClientPage.TradeHistory))">Trades</button>
                     </li>
                     <li class="nav-item">
-                        <button class="page-link" style="@(GetMenuStyle(ClientPage.SwapHistory))" @onclick="@(() => SetPage(ClientPage.SwapHistory))">Swaps</button>
+                        <button class="page-link" style="@(GetMenuStyle(ClientPage.SwapHistory))" @onclick="@(() => SetPage(ClientPage.SwapHistory))">Swap History</button>
+                    </li>
+                    <li class="nav-item">
+                        <button class="page-link" style="@(GetMenuStyle(ClientPage.QuoteHistory))" @onclick="@(() => SetPage(ClientPage.QuoteHistory))">Quote History</button>
                     </li>
                     <li class="nav-item">
                         <button class="page-link" style="@(GetMenuStyle(ClientPage.BlockchainDepositAddress))" @onclick="@(() => SetPage(ClientPage.BlockchainDepositAddress))">Blockchain Addresses</button>
@@ -95,6 +99,10 @@
                             
                         case ClientPage.SwapHistory:
                             <ClientSwapHistoryComponent />
+                            break;
+                            
+                        case ClientPage.QuoteHistory:
+                            <ConverterHistoryComponent WalletId="@ActiveWallet.WalletId" />
                             break;
 
                         case ClientPage.BlockchainDepositAddress:
@@ -158,6 +166,7 @@
         ActiveOrders,
         TradeHistory,
         SwapHistory,
+        QuoteHistory,
         BlockchainDepositAddress,
         Sessions,
         Notifications
